Make Mirror Mode have different axes centers for each opened image

BUG:364289
Fixes T4226