libs/image/kis_image.cc
@@ -139,6 +139,7 @@ public:
         , signalRouter(_q)
         , animationInterface(new KisImageAnimationInterface(q))
         , scheduler(_q)
+        , axesCenter(QPointF(0.5, 0.5))
     {
         {
             KisImageConfig cfg;
@@ -213,6 +214,8 @@ public:
     KisCompositeProgressProxy compositeProgressProxy;
 
     bool blockLevelOfDetail = false;
+
+    QPointF axesCenter;
 
     bool tryCancelCurrentStrokeAsync();
 
@@ -1682,4 +1685,14 @@ KisProofingConfigurationSP KisImage::proofingConfiguration() const
         m_d->proofingConfig = cfg.defaultProofingconfiguration();
     }
     return m_d->proofingConfig;
+}
+
+QPointF KisImage::mirrorAxesCenter() const
+{
+    return m_d->axesCenter;
+}
+
+void KisImage::setMirrorAxesCenter(const QPointF &value) const
+{
+    m_d->axesCenter = value;
 }
